# ptz-gamepad

./: .gitignore  README-dev.md  README.md  cam_config.yml  pyproject.toml
ptz-gamepad/: demo_real_camera.py  handle_events.py  main_gamepad.py  mockup.py
